--- a/public/manifest.webmanifest.json
+++ b/public/manifest.webmanifest.json
@@ -16,7 +16,7 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": "https://phaggio.github.io/weather-pwa/",
+  "start_url": "",
   "display": "standalone",
   "theme_color": "#37474F",
   "background_color": "#B0BEC5"
